--- a/cz_main_cn.ipynb
+++ b/cz_main_cn.ipynb
@@ -46,7 +46,7 @@
     "from scipy.stats import zscore\n",
     "from io import StringIO\n",
     "warnings.filterwarnings(\"ignore\")\n",
-    "os.chdir(os.path.dirname(os.path.expanduser('~/Desktop/lchen/')))\n",
+    "os.chdir(os.path.dirname(os.path.expanduser('path')))\n",
     "import upysal as ps"
    ]
   },
@@ -62,7 +62,7 @@
    "outputs": [],
    "source": [
     "def download_mobile(date):\n",
-    "    url = 'this shoule be your path' # mobile data download path\n",
+    "    url = 'this should be your path' # mobile data download path\n",
     "    with requests.Session() as session:\n",
     "        r = session.get(url)\n",
     "        df = pd.read_csv(StringIO(str(r.content, 'utf-8')))\n",
@@ -88,7 +88,7 @@
     "                   op='within')\n",
     "    df = df.drop([\"index_right\", \"geometry\", \"enable_level\"], axis=1)\n",
     "    df = df[~df[\"grid_id\"].isnull()]\n",
-    "    df['taxi_id'] = df['taxi_id'].str.replace('冀', '')\n",
+    "    df['taxi_id'] = df['taxi_id'].str.replace('', '')\n",
     "    df = df.dropna(subset=[\"pm10\", \"pm25\"], how='all')\n",
     "    df = time_columns(df)\n",
     "    return (df)\n",
