--- a/cz_main.ipynb
+++ b/cz_main.ipynb
@@ -12,7 +12,7 @@
    "outputs": [],
    "source": [
     "#This program is an air quality monitoring data post-processing and analysis routine\n",
-    "#prepared by Environmental Defense Fund.\n",
+    "#prepared by Environmental Defense Fund China.\n",
     "#For details on how to use this program refer to the doc/ folder in each root\n",
     "#subfolder.\n",
     "#This program is free software: you can redistribute it and/or modify\n",
